brat/test/golden/error/portpull-ambiguous.brat
id(n :: Nat) -> Nat
id = x => x

-- This should fail because there are multiple ports called "n"
id2(Nat, Nat) -> Nat, Nat
id2 = x, y => (id,id)(n:x, y)
