brat/test/golden/error/portpull-ambiguous.brat.golden
Error in test/golden/error/portpull-ambiguous.brat on line 6:
id2 = x, y => (id,id)(n:x, y)
                     ^^^^^^^^

  Port n is ambiguous in (n :: Nat, n :: Nat)

